--- a/src/styles.css
+++ b/src/styles.css
@@ -9,11 +9,12 @@ html {
   --border5px: 5px;
   --border10px: 10px;
 }
-.links {
+.links, a{
   text-decoration: none;
 }
 
 body {
+background: #000;
   color: white;
   margin: 0;
   padding: 0;
@@ -49,7 +50,6 @@ nav .links {
 nav .links:hover {
   border: 1px solid var(--textColor);
 }
-
 
 .info {
   width: 80%;
@@ -101,24 +101,47 @@ nav .links:hover {
   box-shadow: 0px 0px 5px 1px rgb(92, 92, 92);
 }
 
-.projects
-{
-
-  
+.projects {
 }
-.project-container
-{
+.project-container {
   display: flex;
   flex-wrap: wrap;
+  padding: 2rem;
 }
 
-.projects .tile
-{
+.projects .tile {
   flex: 25%;
-
+  margin:1rem;
+  padding: 2rem;
+  box-shadow: 1px 1px 10px rgb(55, 55, 55);
+  animation-name: popOut;
+  animation-duration: 1s;
 }
 
 
+.projects .tile h1 {
+  font-size: 2rem;
+  font-weight: lighter;
+}
+.projects .tile img
+{
+  width: 100%;
+}
+.projects .tile a
+{
+  color: white;
+  margin: 0.5rem;
+  border: 1px solid white;
+  padding: 0.5rem;
+
+}
+
+@keyframes popOut {
+  from {
+  }
+  to {
+  }
+}
 
 @keyframes leftToRight {
   from {
