--- a/src/styles.css
+++ b/src/styles.css
@@ -6,12 +6,21 @@ html {
 :root {
   --textColor: rgb(209, 209, 209);
   --text-black: black;
+  --text-grey: rgb(63, 63, 63);
   --border5px: 5px;
   --border10px: 10px;
 }
 .links, a{
   text-decoration: none;
 }
+hr
+{
+  margin: 3rem 0rem;
+border-top: 1px solid rgb(168, 168, 168);
+
+}
+
+/* *********icons************** */
 .html5
 {
   color: orange;
@@ -31,8 +40,11 @@ color: rgb(0, 145, 255);
 .bootstrap{
 color: rgb(111, 0, 255);
 }
-
-
+.photoshop
+{
+  color: rgb(0, 102, 255)
+}
+/* *******************main****************************** */
 body {
 background: #000;
   color: white;
@@ -73,21 +85,31 @@ nav .links:hover {
 
 .home{
   height: 100vmin;
+  position: relative;
 }
 .info {
   width: 80%;
   height: 80%;
   position: absolute;
   left: 4rem;
-  top: 6rem;
   animation-name: leftToRight;
   animation-duration: 2s;
   transition: ease-in;
 }
+
 .info h1 {
   font-family: "Dancing Script", cursive;
   font-size: 5rem;
   font-weight: 100;
+}
+.info .button
+{
+  top: 2rem;
+  padding: 0.5rem 1rem;
+  border: 1px solid var(--textColor);
+  color: white;
+  text-decoration: none;
+
 }
 
 .contact {
@@ -176,9 +198,8 @@ nav .links:hover {
 {
 
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 2rem;
-
 
 }
 .skills-section .skill
@@ -190,8 +211,56 @@ nav .links:hover {
   gap: 1rem;
   width: auto;
   border-radius: var(--border5px);
-  box-shadow: 2px 2px 1px 2px rgb(43, 43, 43);
+  box-shadow: 0px 0px 1px 2px rgb(43, 43, 43);
+  transition: 0.5s ease;
   
+}
+.skills-section .skill:hover
+{
+transform: scale(1.05);
+box-shadow: 0px 0px 5px 2px rgb(201, 201, 201);
+
+  
+
+
+}
+
+/* ****************blogs section***************** */
+
+.blogs
+{
+
+  background: #d1dce7;
+
+  display: flex;
+  justify-content: center;
+  color: var(--text-grey);
+
+}
+.blogs .blog-container
+{
+  width: 70%;
+  margin: 2rem auto;
+}
+.blogs .blog-container .blog-header h1
+{
+
+  cursor: pointer;
+  color: var(--text-grey);
+  font-size: x-large;
+  font-weight: bold;
+
+}
+.blogs .blog-container .blog-tile
+{
+  padding: 0.5rem;
+  margin: 0rem 1rem;
+  animation-name: fadeIn;
+  animation-duration: 2s;
+}
+.blogs .blog-container .blog-tile .read-more
+{
+color: rgb(36, 36, 48);
 }
 
 @keyframes fadeIn {
