--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,7 @@ hr {
 }
 /* *******************main****************************** */
 body {
+  user-select: none;
   background: #000;
   color: white;
   margin: 0;
@@ -248,6 +249,68 @@ nav .links:hover {
 .blogs .blog-container .blog-tile .read-more {
   color: rgb(36, 36, 48);
 }
+/* ********************about me***************************** */
+
+.aboutMe {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 70%;
+  margin: 2rem auto;
+}
+
+/* **********************contact section***************** */
+
+.contact .contact-container {
+  width: 60%;
+  margin: 2rem auto;
+  color: white;
+  user-select: auto;
+}
+.contact .contact-container form {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+  padding: 2rem 2rem;
+  margin: 0 auto;
+  border: 1px solid rgb(22, 22, 22);
+  border-radius: var(--border10px);
+  background: rgb(0, 0, 0);
+  animation-name: fadeIn;
+  animation-duration: 1s;
+}
+.contact .contact-container form input {
+  margin: 1rem 0px 0px 0px;
+  padding: 0.5rem 1rem;
+  border: 1px solid rgb(24, 24, 24);
+  border-radius: var(--border5px);
+  outline: none;
+  color: white;
+  background: #000;
+  transition: 0.5s;
+}
+.contact .contact-container form textarea {
+  min-height: 100px;
+  padding: 0.5rem 1rem;
+  border-radius: var(--border5px);
+  outline: none;
+  color: white;
+  border: 1px solid rgb(24, 24, 24);
+  background: #000;
+  transition: 0.5s;
+}
+.contact .contact-container form textarea:focus,
+.contact .contact-container form input:focus {
+  box-shadow: 0px 0px 5px 5px rgb(48, 48, 48);
+}
+.contact-container button {
+  padding: 0.5rem 1rem;
+  border: none;
+
+  outline: none;
+  color: white;
+  background: rgb(0, 217, 255);
+  border-radius: var(--border5px);
+}
 
 /* *****************media queries********************** */
 
@@ -291,9 +354,7 @@ nav .links:hover {
     margin: 0;
   }
   nav #contact {
-
     display: none;
-
   }
 
   .home .go-to-project .links-circle {
@@ -315,8 +376,8 @@ nav .links:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-justify-content: center;
-height: 90vh;
+    justify-content: center;
+    height: 90vh;
   }
 
   .info {
@@ -406,13 +467,10 @@ height: 90vh;
   }
 }
 
-@media screen and (max-width: 410px)
-{ .info h1 {
-  font-size: 3rem;
+@media screen and (max-width: 410px) {
+  .info h1 {
+    font-size: 3rem;
   }
-
-
-
 }
 /* ******************keyframes***************** */
 @keyframes fadeIn {
