--- a/src/styles.css
+++ b/src/styles.css
@@ -116,6 +116,10 @@ nav .links:hover {
 }
 
 .info .info-div h1 {
+  background: linear-gradient(to right, #eb3349 0%, #ff5e00 51%, #eb3349 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-family: "Dancing Script", cursive;
   font-size: 4.5rem;
   font-weight: 100;
@@ -162,17 +166,17 @@ nav .links:hover {
   animation-duration: 2s;
 }
 .go-to-project .links {
+  background: linear-gradient(to right, #eb3349 0%, #ff5e00 51%, #eb3349 100%);
+  background-size: 200% auto;
   color: white;
   margin-left: 1rem;
   padding: 0.5rem 1rem;
-  border: 1px solid var(--textColor);
-  transition: border 0.3s;
+  transition: 0.3s;
 }
 .go-to-project .links:hover {
-  color: var(--textColor);
-  border: 1px solid black;
-  border-radius: var(--border5px);
-  box-shadow: 0px 0px 5px 1px rgb(92, 92, 92);
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  border-radius: var(--border10px);
 }
 .home .go-to-project .links-circle {
   visibility: hidden;
