--- a/src/styles.css
+++ b/src/styles.css
@@ -86,9 +86,8 @@ nav .links {
   border-radius: var(--border5px);
   transition: 0.3s;
 }
-nav .links:hover
-{
-  color: rgb(0, 0, 0);
+nav .links:hover {
+  color: black;
 }
 nav .links:before {
   content: "";
@@ -97,7 +96,7 @@ nav .links:before {
   width: 0%;
   top: 0;
   height: 100%;
-  background: rgba(228, 61, 0, 0.7);
+  background-color: rgba(228, 61, 0, 0.7);
   transition: 0.3s ease-in;
   z-index: 10;
 }
@@ -273,7 +272,7 @@ nav .links:hover:before {
   padding: 1rem;
   flex: 20%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   align-items: center;
   width: auto;
   border-radius: var(--border5px);
@@ -579,6 +578,12 @@ button {
     padding: 0.4rem 0.7rem;
     font-size: small;
   }
+  
+  .projects .tile
+  {
+flex: 45%;
+    padding: 1rem 0.5rem; 
+  }
 }
 @media screen and (max-width: 625px) {
   nav {
@@ -591,6 +596,7 @@ button {
   .blogs .blog-container {
     width: 80%;
   }
+
 
   .home .go-to-project .links {
     border-radius: 50%;
@@ -749,6 +755,13 @@ button {
     height: 140px;
     margin: 0 auto;
   }
+  nav {
+    justify-content: space-evenly;
+    margin-top: 2rem;
+  }
+  .go-to-project {
+    position: static;
+  }
 }
 @media screen and (max-width: 376px) {
   .info {
@@ -762,8 +775,9 @@ button {
   .info .info-div h1 {
     font-size: 2.5rem;
   }
-  .go-to-project {
-    position: static;
+  .projects .tile a {
+    font-size: small;
+    padding: 0.3rem 0.7rem;
   }
   .contact .contact-container {
     width: 270px;
@@ -783,6 +797,21 @@ button {
     margin: 0 0 0 2rem;
     font-size: small;
   }
+}
+
+@media screen and (max-width: 325px)
+{
+  .projects .tile
+  {
+    margin: 0.2rem;
+    padding: 2rem 1rem;
+  }
+
+  .projects .tile a {
+    font-size: smaller;
+    padding: 0.25rem 0.5rem;
+  }
+
 }
 /* ******************keyframes***************** */
 @keyframes fadeIn {
