--- a/src/styles.css
+++ b/src/styles.css
@@ -396,8 +396,9 @@ nav .links:hover:before {
 .aboutMe .info-and-img .small-info {
   flex: 50%;
   word-wrap: wrap;
-  justify-self: flex-start;
-  padding: 5px;
+  justify-self: center;
+  align-self: center;
+  padding: 15px;
   border-radius: var(--border5px);
 
   border: 1px solid rgb(37, 37, 37);
@@ -418,7 +419,7 @@ nav .links:hover:before {
   border: 1px solid rgb(37, 37, 37);
   border-radius: var(--border5px);
   margin: 5px;
-  padding: 5px;
+  padding: 15px;
 }
 /* **********************contact section***************** */
 
