--- a/src/styles.css
+++ b/src/styles.css
@@ -294,12 +294,10 @@ nav .links:hover:before {
   z-index: -1;
 }
 .projects .tile a:hover:before {
-
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-
 }
 /* **************Skill section******************** */
 .skills {
@@ -821,7 +819,10 @@ button {
     flex: 80%;
     align-self: center;
     justify-self: center;
+    animation-name: forHome;
+    animation-duration: 2s;
   }
+  
   .info .info-div h1 {
     font-size: 2.5rem;
   }
