--- a/src/styles.css
+++ b/src/styles.css
@@ -470,7 +470,7 @@ nav .links:hover:before {
   animation-duration: 1s;
 }
 .contact .contact-container form input {
-  margin: 1rem 0px 0px 0px;
+  margin: 0.7rem 0px 0px 0px;
   padding: 0.5rem 1rem;
   border: 1px solid rgb(24, 24, 24);
   border-radius: var(--border5px);
@@ -488,6 +488,7 @@ nav .links:hover:before {
   border: 1px solid rgb(24, 24, 24);
   background: #000;
   transition: 0.5s;
+  margin: 0.7rem 0 0 0;
 }
 .contact .contact-container form textarea:focus,
 .contact .contact-container form input:focus {
